still fixing totalprice in swagger
