# docs/swagger.json
@@ -1,7 +1,10 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "backend TixIT",
+        "title": "TixIT",
+        "contact": {},
+        "version": "1.0"
     },
     "basePath": "/",
     "paths": {
@@ -126,6 +129,38 @@
                     "Movies"
                 ],
                 "summary": "get all list movies",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": " ",
+                        "name": "search",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": " ",
+                        "name": "sortBy",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": " ",
+                        "name": "sortOrder",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": " ",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": " ",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -140,17 +175,28 @@
                                         "results": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/models.Movie"
+                                                "$ref": "#/definitions/models.MovieData"
                                             }
                                         }
                                     }
                                 }
                             ]
                         }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.Response401"
+                        }
                     }
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "untuk membuat movie baru",
                 "consumes": [
                     "application/x-www-form-urlencoded"
@@ -194,7 +240,7 @@
                     {
                         "type": "string",
                         "description": " ",
-                        "name": "release_date",
+                        "name": "releaseDate",
                         "in": "formData",
                         "required": true
                     },
@@ -231,13 +277,19 @@
                                 }
                             ]
                         }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.Response401"
+                        }
                     }
                 }
             }
         },
         "/movies/{id}": {
             "get": {
-                "description": "untuk mendapatkan list dari id",
+                "description": "untuk mendapatkan list movie dari id",
                 "consumes": [
                     "application/x-www-form-urlencoded"
                 ],
@@ -251,7 +303,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "user id",
+                        "description": "movie id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -274,6 +326,141 @@
                                     }
                                 }
                             ]
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.Response401"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "untuk menghapus movie",
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Movies"
+                ],
+                "summary": "delete movie by id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "movie id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/controllers.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "results": {
+                                            "$ref": "#/definitions/models.Movie"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.Response401"
+                        }
+                    }
+                }
+            }
+        },
+        "/orders": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "untuk memesan tiket",
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Orders"
+                ],
+                "summary": "place order",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": " ",
+                        "name": "cinemaId",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
+                        "description": " ",
+                        "name": "movieId",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
+                        "description": " ",
+                        "name": "paymentId",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        },
+                        "collectionFormat": "csv",
+                        "description": " ",
+                        "name": "seats[]",
+                        "in": "formData"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/controllers.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "results": {
+                                            "$ref": "#/definitions/models.TransactionResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.Response401"
                         }
                     }
                 }
@@ -315,12 +502,23 @@
                                 }
                             ]
                         }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.Response401"
+                        }
                     }
                 }
             }
         },
         "/users": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "untuk mendapatkan list semua user",
                 "consumes": [
                     "application/x-www-form-urlencoded"
@@ -332,6 +530,38 @@
                     "Users"
                 ],
                 "summary": "get all list users",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": " ",
+                        "name": "search",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": " ",
+                        "name": "sortBy",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": " ",
+                        "name": "sortOrder",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": " ",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": " ",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -353,10 +583,21 @@
                                 }
                             ]
                         }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.Response401"
+                        }
                     }
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "untuk membuat user baru",
                 "consumes": [
                     "application/x-www-form-urlencoded"
@@ -405,12 +646,23 @@
                                 }
                             ]
                         }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.Response401"
+                        }
                     }
                 }
             }
         },
         "/users/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "untuk mendapatkan user",
                 "consumes": [
                     "application/x-www-form-urlencoded"
@@ -449,10 +701,21 @@
                                 }
                             ]
                         }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.Response401"
+                        }
                     }
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "untuk menghapus user",
                 "consumes": [
                     "application/x-www-form-urlencoded"
@@ -469,7 +732,7 @@
                         "type": "integer",
                         "description": "user id",
                         "name": "id",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -494,10 +757,21 @@
                                 }
                             ]
                         }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.Response401"
+                        }
                     }
                 }
             },
             "patch": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "untuk merubah data user",
                 "consumes": [
                     "application/x-www-form-urlencoded"
@@ -514,7 +788,7 @@
                         "type": "integer",
                         "description": "user id",
                         "name": "id",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     },
                     {
@@ -534,21 +808,21 @@
                     {
                         "type": "string",
                         "description": " ",
-                        "name": "first_name",
+                        "name": "firstName",
                         "in": "formData",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": " ",
-                        "name": "last_name",
+                        "name": "lastName",
                         "in": "formData",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": " ",
-                        "name": "phone_number",
+                        "name": "phoneNumber",
                         "in": "formData",
                         "required": true
                     },
@@ -581,6 +855,12 @@
                                 }
                             ]
                         }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.Response401"
+                        }
                     }
                 }
             }
@@ -597,6 +877,19 @@
                 "results": {},
                 "success": {
                     "type": "boolean"
+                }
+            }
+        },
+        "controllers.Response401": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "default": "Unauthorized"
+                },
+                "success": {
+                    "type": "boolean",
+                    "default": false
                 }
             }
         },
@@ -627,6 +920,73 @@
                     "type": "string"
                 },
                 "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.MovieData": {
+            "type": "object",
+            "required": [
+                "banner",
+                "image"
+            ],
+            "properties": {
+                "banner": {
+                    "type": "string"
+                },
+                "castName": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "directorName": {
+                    "type": "string"
+                },
+                "duration": {
+                    "description": "ReleaseDate time.Time `json:\"releaseDate\" form:\"release_date\"`",
+                    "type": "string"
+                },
+                "genreName": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "releaseDate": {
+                    "type": "string"
+                },
+                "synopsis": {
+                    "type": "string"
+                },
+                "tag": {
+                    "description": "Image *multipart.FileHeader `json:\"image\" form:\"image\" binding:\"required\"`\nBanner *multipart.FileHeader `json:\"banner\" form:\"banner\" binding:\"required\"`",
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.TransactionResponse": {
+            "type": "object",
+            "properties": {
+                "expiryDate": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "totalPrice": {
+                    "type": "integer"
+                },
+                "virtualId": {
                     "type": "string"
                 }
             }
