# models/profiles.go
@@ -9,6 +9,7 @@ import (
 
 type Profile struct {
 	Id         int       `json:"id"`
+	Email      string    `json:"email" form:"email"`
 	FirstName   *string    `json:"firstName" form:"first_name"`
 	LastName   *string    `json:"lastName" form:"last_name"`
 	PhoneNumber   string    `json:"phoneNumber" form:"phone_number"`
@@ -25,10 +26,11 @@ func FindOneProfile(paramId int) Profile {
 	defer conn.Close(context.Background())
 
 	err := conn.QueryRow(context.Background(), `
-		SELECT id, first_name, last_name, phone_number, image, point, created_at, updated_at
+		SELECT id, email, first_name, last_name, phone_number, image, point, created_at, updated_at
 		FROM users WHERE id = $1
 	`, paramId).Scan(
 		&profile.Id,
+		&profile.Email,
 		&profile.FirstName,
 		&profile.LastName,
 		&profile.PhoneNumber,
